# final-nn

./: autoencoder.ipynb  classifier.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
nn/: nn.py  preprocess.py
test/: test_nn.py
